dashboard, fixed bars, prod table visible eshya

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@
   color: var(--light-green);
   font-weight: 600;
   cursor: pointer;
-  background-color: rgb(201, 241, 210);
+  border: 1px solid var(--light-green);
   padding: 5% 10%;
   border-radius: 50px;
 }
@@ -143,7 +143,7 @@
   color: rgb(253, 181, 27);
   font-weight: 600;
   cursor: pointer;
-  background-color: rgb(255, 239, 210);
+  border: 1px solid rgb(253, 181, 27);
   padding: 5% 10%;
   border-radius: 50px;
 }
